byttet input submit med button submit

--- a/boksokOgSortering/src/main/resources/static/sokeside.html
+++ b/boksokOgSortering/src/main/resources/static/sokeside.html
@@ -21,7 +21,7 @@
     <p>drama: <input type="checkbox" name="filter" value="Drama"></p>
     <p>romanse: <input type="checkbox" name="filter" value="Romanse"></p>
 
-    <p><input type="submit" value="Søk"></p>
+    <button type="submit">søk!</button>
 </form>
 
 
