--- a/v1/bokliste/src/main/resources/static/sokeside.html
+++ b/v1/bokliste/src/main/resources/static/sokeside.html
@@ -6,7 +6,7 @@
     <title>Søk på forfatter</title>
 </head>
 <body>
-<h4>Søk etter bøker på forfatter</h4>
+<a href="index.html">Søk etter bøker på forfatter</a>
 <!-- Fyll inn form-tag for å sende en request for søk på forfatter  -->
 </body>
 </html>
